// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildUserInvitedNotRegisteredEmailBody Should build the correct message 1`] = `
Object {
  "Destination": Object {
    "ToAddresses": Array [
      "test@email.com",
    ],
  },
  "Message": Object {
    "Body": Object {
      "Html": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <p>
              Hello, <br/>
              Your collaborator inviter@example.com has invited you to explore their single cell RNA-seq project in Cellenics. <br/><br/>
              You need to create a Cellenics account in order to access the project. <br/>
              Register at <a href=\\"https://test.com\\">https://test.com</a> using this email address.<br/> <br/>

              Cellenics is a user-friendly online tool for single cell RNA-seq data analysis. <br/>
              The platform is designed specifically for biologists, and it's completely free for academic researchers.<br/><br/>
              More information about Cellenics can be found at <a href=\\"https://biomage.net\\">biomage.net</a>.<br/><br/>
              If you need help or have any questions, please contact us at hello@biomage.net. <br/><br/>
              Best Regards, <br/>
              Cellenics team
            <p/>
        </body>
      </html>",
      },
      "Text": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <p>
              Hello, <br/>
              Your collaborator inviter@example.com has invited you to explore their single cell RNA-seq project in Cellenics. <br/><br/>
              You need to create a Cellenics account in order to access the project. <br/>
              Register at <a href=\\"https://test.com\\">https://test.com</a> using this email address.<br/> <br/>

              Cellenics is a user-friendly online tool for single cell RNA-seq data analysis. <br/>
              The platform is designed specifically for biologists, and it's completely free for academic researchers.<br/><br/>
              More information about Cellenics can be found at <a href=\\"https://biomage.net\\">biomage.net</a>.<br/><br/>
              If you need help or have any questions, please contact us at hello@biomage.net. <br/><br/>
              Best Regards, <br/>
              Cellenics team
            <p/>
        </body>
      </html>",
      },
    },
    "Subject": Object {
      "Charset": "UTF-8",
      "Data": "Invitation to join a project in Cellenics",
    },
  },
  "Source": "notification@localhost.test",
}
`;

exports[`buildUserInvitedNotRegisteredEmailBody Should build the correct message for HMS 1`] = `
Object {
  "Destination": Object {
    "ToAddresses": Array [
      "test@email.com",
    ],
  },
  "Message": Object {
    "Body": Object {
      "Html": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <p>
              Hello, <br/>
              Your collaborator inviter@example.com has invited you to explore their single cell RNA-seq project in Cellenics. <br/><br/>
              You need to create a Cellenics account in order to access the project. <br/>
              Register at <a href=\\"https://test.com\\">https://test.com</a> using this email address.<br/> <br/>

              Cellenics is a user-friendly online tool for single cell RNA-seq data analysis. <br/>
              The platform is designed specifically for biologists, and it's completely free for academic researchers.<br/><br/>
              Best Regards, <br/>
              Cellenics team
            <p/>
        </body>
      </html>",
      },
      "Text": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <p>
              Hello, <br/>
              Your collaborator inviter@example.com has invited you to explore their single cell RNA-seq project in Cellenics. <br/><br/>
              You need to create a Cellenics account in order to access the project. <br/>
              Register at <a href=\\"https://test.com\\">https://test.com</a> using this email address.<br/> <br/>

              Cellenics is a user-friendly online tool for single cell RNA-seq data analysis. <br/>
              The platform is designed specifically for biologists, and it's completely free for academic researchers.<br/><br/>
              Best Regards, <br/>
              Cellenics team
            <p/>
        </body>
      </html>",
      },
    },
    "Subject": Object {
      "Charset": "UTF-8",
      "Data": "Invitation to join a project in Cellenics",
    },
  },
  "Source": "alex_pickering@hms.harvard.edu",
}
`;
